Move variable out of the script and reuse separately for other scripts